--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.block-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  cursor: none;
+}
+
+.block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  height: 100%;
+  width: 70vw;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.follow-card {
+  position: absolute;
+  z-index: 9999;
+  width: 60px;
+  height: 60px;
+  border-radius: 2px;
+  background-color: rgb(red, green, blue, 0.2);
+  backdrop-filter: blur(5px);
+  box-shadow: 1px 1px 2px 1px rgb(red, green, blue, 0.2);
+  border: 1px solid #000;
+  pointer-events: none;
+}
+
+.follow-tri {
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: 9999;
+  border: 30px solid transparent;
+  border-top: 0;
+  border-bottom: 60px solid;
+  /* background-color: rgb(red, green, blue, 0.2); */
+  /* backdrop-filter: blur(5px); */
+  /* box-shadow: 1px 1px 2px 1px rgb(red, green, blue, 0.2); */
+  pointer-events: none;
 }
